fixed link to CSS file

--- a/html_css_js_overview/html_css_js_overview.html
+++ b/html_css_js_overview/html_css_js_overview.html
@@ -89,7 +89,7 @@
 
         <p>
             CSS, short for "Cascading Style Sheets," is the current mechanism for specifying appearance of web pages.  This includes things like color and font,
-            but also the position of elements on the page and various animation effects.  Check out the <a href="testproj.css">style file for this page</a>
+            but also the position of elements on the page and various animation effects.  Check out the <a href="html_css_js_overview.css">style file for this page</a>
             for some simple, commented CSS.  Then take the <a href="https://www.w3schools.com/css/default.asp">W3Schools tutorial</a>.  Pay especial attention to
             CSS selectors: CSS style rules are specified in blocks that apply to groups of tags; selectors are the way you specify the relvant group.
             Selectors can refer to a specific element (by using its ID), a specific type of element (e.g. all &lt;p&gt;), all elements containing a
