--- a/d3_example/d3example.html
+++ b/d3_example/d3example.html
@@ -14,7 +14,7 @@
     <div>
       <button onclick="toggleData()">Toggle Data Sets</button>
     </div>
-    <svg id="d3anchor" width="250" height="250">
+    <svg id="d3anchor" width="50%" height="50%">
       <g id="xaxis" class="axis"></g> <!-- empty group elements where we can insert and replace axes -->
       <g id="yaxis" class="axis"></g>
     </svg>
